# mywr

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  LICENSE.txt  README.md  annotated.html  annotated_dup.js  classes.html  dir_a23303a2132fcd7f5b9937a9b7164521.html  dir_a23303a2132fcd7f5b9937a9b7164521.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_fd360de887e5765cb34990b02795f135.html  dir_fd360de887e5765cb34990b02795f135.js  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_type.html  functions_vars.html  index.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespacemembers_vars.html  namespaces.html  namespaces_dup.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js
.github/workflows/: build-config.json  format-check.yaml  linux-compile-check.yaml  upload-docs.yaml  windows-compile-check.yaml
d0/d21/: disassembler_8hpp_source.html
d0/d60/: namespacemywr_1_1disassembler.html
d0/dbd/: structmywr_1_1detail_1_1is__non__pod.html
d1/d1d/: structmywr_1_1invoker_1_1impl_1_1invoker_3_01detail_1_1calling__conventions_1_1kStdcall_01_4-members.html
d1/d3f/: namespacemywr.html  namespacemywr.js
d1/d8b/: structmywr_1_1invoker_1_1impl_1_1invoker_3_01detail_1_1calling__conventions_1_1kSystemV_01_4-members.html
d1/dec/: classmywr_1_1detail_1_1system__abi-members.html
d2/d05/: structmywr_1_1invoker_1_1impl_1_1invoke_3_01Fun_00_01std_1_1tuple_3_01Args_8_8_8_01_4_01_4-members.html
d2/d1e/: classmywr_1_1address.html  classmywr_1_1address.js
d2/d77/: procfs_8hpp_source.html
d2/dea/: classmywr_1_1detail_1_1system__abi.html  classmywr_1_1detail_1_1system__abi.js
d3/d33/: structmywr_1_1invoker_1_1impl_1_1invoker_3_01detail_1_1calling__conventions_1_1kFastcall_01_4-members.html
d3/d7b/: namespacemywr_1_1traits.html  namespacemywr_1_1traits.js
d3/d90/: structmywr_1_1traits_1_1function__trait-members.html
d3/de9/: classmywr_1_1address-members.html
d4/d09/: classmywr_1_1protect_1_1scoped__protect.html  classmywr_1_1protect_1_1scoped__protect.js
d4/d64/: mywr_8hpp_source.html
d5/d03/: structmywr_1_1invoker_1_1impl_1_1invoke_3_01Fun_00_01std_1_1tuple_3_01Args_8_8_8_01_4_01_4.html
d6/d8d/: structmywr_1_1invoker_1_1impl_1_1invoker_3_01detail_1_1calling__conventions_1_1kStdcall_01_4.html
d6/d9c/: classmywr_1_1procfs_1_1parser.html  classmywr_1_1procfs_1_1parser.js
d6/de5/: namespacemywr_1_1invoker.html  namespacemywr_1_1invoker.js
d6/dee/: structmywr_1_1procfs_1_1memory__region.html  structmywr_1_1procfs_1_1memory__region.js
d6/dfa/: classmywr_1_1protect_1_1memory__prot-members.html
d7/dc2/: detail_8hpp_source.html
d7/def/: classmywr_1_1procfs_1_1parser-members.html
d8/d4c/: invoker_8hpp_source.html
d8/d75/: protect_8hpp_source.html
d8/db2/: classmywr_1_1detail_1_1calling__conventions.html  classmywr_1_1detail_1_1calling__conventions.js
d8/db9/: structmywr_1_1invoker_1_1impl_1_1invoker_3_01detail_1_1calling__conventions_1_1kCdecl_01_4-members.html
d8/dc3/: namespacemywr_1_1detail.html  namespacemywr_1_1detail.js
d8/dd6/: structmywr_1_1invoker_1_1impl_1_1invoke.html
d9/d61/: structmywr_1_1invoker_1_1impl_1_1invoker_3_01detail_1_1calling__conventions_1_1kCdecl_01_4.html
d9/db7/: structmywr_1_1invoker_1_1impl_1_1invoker_3_01detail_1_1calling__conventions_1_1kThiscall_01_4-members.html
da/d0a/: structmywr_1_1invoker_1_1impl_1_1invoker_3_01detail_1_1calling__conventions_1_1kSystemV_01_4.html
da/d77/: structmywr_1_1traits_1_1function__trait.html  (+1 more)
demo/: CMakeLists.txt  address_showcase.cpp  llmo_showcase.cpp  main.cpp  protect_showcase.cpp
include/: CMakeLists.txt
include/mywr/: mywr.hpp
include/mywr/internal/: allocator.hpp  hook.hpp  invoker.hpp  llmo.hpp  memmap.hpp  module.hpp  patch.hpp  protect.hpp  scanner.hpp
include/mywr/internal/hook/: codegen.hpp  constants.hpp  context.hpp  errors.hpp  relay.hpp  types.hpp  utility.hpp
include/mywr/internal/hook/architecture/x86/: codegen.inl  context.inl  relay.inl
include/mywr/internal/platform/windows/: module.inl  protect.inl
include/mywr/internal/windows/: allocator.inl  memmap.inl  module.inl  protect.hpp  protect.inl
include/mywr/shared/: abi.hpp  address.hpp  calling_conventions.hpp  compiler_macroses.hpp  core.hpp  disassembler.hpp  error_handling.hpp  function_traits.hpp  osheaders.hpp  protection_flags.hpp  sys.hpp  utility.hpp  version.hpp
include/mywr/shared/core/: address.hpp  architecture.hpp  core.hpp  os.hpp  osheaders.hpp  version.hpp  version.hpp.in
include/mywr/shared/platform/windows/: protection_flags.inl  sys.inl
include/mywr/shared/windows/: protection_flags.hpp  protection_flags.inl
include/mywr/x86/hook/: context.hpp  hook32.hpp  relay.hpp
include/mywr/x86_64/: address.hpp  detail.hpp  disassembler.hpp  hook.hpp  invoker.hpp  llmo.hpp  patch.hpp  proc.hpp  procfs.hpp  protect.hpp  traits.hpp
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_1.js  enumvalues_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  (+10 more)
tests/: CMakeLists.txt  address_test.cpp  disassembler_test.cpp  hook_test.cpp  invoker_test.cpp  llmo_test.cpp  patch_test.cpp  proc_test.cpp  protect_test.cpp  traits_test.cpp
tests/internal/: allocator.cpp  invoker.cpp  llmo.cpp  patch.cpp  protect.cpp  scanner.cpp
tests/internal/x32/: hook32.cpp  hook32.hpp  hook32_cdecl.cpp  hook32_fastcall.cpp  hook32_stdcall.cpp  hook32_thiscall.cpp  invoker32.cpp
tests/internal/x64/: invoker64.cpp
tests/shared/: address.cpp  disassembler.cpp
(+20 files in other folders)
